--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "version": "0.0.0",
     "license": "MIT",
     "scripts": {
-        "postinstall": "ngcc --properties es2015 browser module main"
+        "postinstall": "ngcc --properties es2015 browser module main",
+        "build": "nx run-many --target=build --projects=core,cannon,postprocessing,soba"
     },
     "private": true,
     "dependencies": {
