--- a/libs/cannon/project.json
+++ b/libs/cannon/project.json
@@ -8,7 +8,8 @@
             "executor": "@nrwl/angular:package",
             "outputs": ["dist/libs/cannon"],
             "options": {
-                "project": "libs/cannon/ng-package.json"
+                "project": "libs/cannon/ng-package.json",
+                "updateBuildableProjectDepsInPackageJson": false
             },
             "configurations": {
                 "production": {
