--- a/libs/core/project.json
+++ b/libs/core/project.json
@@ -8,7 +8,8 @@
             "executor": "@nrwl/angular:package",
             "outputs": ["dist/libs/core"],
             "options": {
-                "project": "libs/core/ng-package.json"
+                "project": "libs/core/ng-package.json",
+                "updateBuildableProjectDepsInPackageJson": false
             },
             "configurations": {
                 "production": {
