docs(storybook): add Detailed story

--- a/libs/soba/project.json
+++ b/libs/soba/project.json
@@ -40,7 +40,11 @@
                     "libs/soba/cameras/**/*.ts",
                     "libs/soba/cameras/**/*.html",
                     "libs/soba/loaders/**/*.ts",
-                    "libs/soba/loaders/**/*.html"
+                    "libs/soba/loaders/**/*.html",
+                    "libs/soba/misc/**/*.ts",
+                    "libs/soba/misc/**/*.html",
+                    "libs/soba/performances/**/*.ts",
+                    "libs/soba/performances/**/*.html"
                 ]
             }
         }
