--- a/libs/storybook/.eslintrc.json
+++ b/libs/storybook/.eslintrc.json
@@ -5,27 +5,9 @@
         {
             "files": ["*.ts"],
             "extends": [
-                "plugin:@nrwl/nx/angular",
                 "plugin:@angular-eslint/template/process-inline-templates"
             ],
-            "rules": {
-                "@angular-eslint/directive-selector": [
-                    "error",
-                    {
-                        "type": "attribute",
-                        "prefix": "ngt",
-                        "style": "camelCase"
-                    }
-                ],
-                "@angular-eslint/component-selector": [
-                    "error",
-                    {
-                        "type": "element",
-                        "prefix": "ngt",
-                        "style": "kebab-case"
-                    }
-                ]
-            }
+            "rules": {}
         },
         {
             "files": ["*.html"],
