feat(soba/abstractions): init abstractions entry

--- a/libs/soba/package.json
+++ b/libs/soba/package.json
@@ -10,6 +10,7 @@
     },
     "dependencies": {
         "three-stdlib": "~2.8.6",
+        "troika-three-text": "~0.45.0",
         "tslib": "^2.3.0"
     }
 }
