--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "rxjs": "~7.5.4",
         "three": "0.137.5",
         "three-stdlib": "~2.8.6",
+        "troika-three-text": "~0.45.0",
         "tslib": "^2.3.1",
         "zone.js": "~0.11.4"
     },
