--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -54,6 +54,9 @@
                 "libs/postprocessing/effects/src/index.ts"
             ],
             "@angular-three/soba": ["libs/soba/src/index.ts"],
+            "@angular-three/soba/abstractions": [
+                "libs/soba/abstractions/src/index.ts"
+            ],
             "@angular-three/soba/cameras": ["libs/soba/cameras/src/index.ts"],
             "@angular-three/soba/controls": ["libs/soba/controls/src/index.ts"],
             "@angular-three/soba/loaders": ["libs/soba/loaders/src/index.ts"],
