chore(repo): get build scripts ready

--- a/libs/cannon/project.json
+++ b/libs/cannon/project.json
@@ -43,6 +43,13 @@
                     "libs/cannon/constraints/**/*.html"
                 ]
             }
+        },
+        "publish": {
+            "executor": "@nrwl/workspace:run-commands",
+            "options": {
+                "command": "npm publish",
+                "cwd": "dist/libs/cannon"
+            }
         }
     },
     "tags": ["scope:cannon"]
