--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "commit": "git-cz",
         "contributors:init": "all-contributors init",
         "contributors:add": "all-contributors add",
+        "release": "dotenv release-it --",
         "storybook": "nx storybook storybook",
         "storybook:build": "nx storybook storybook:build-storybook",
         "build": "nx run-many --target=build --projects=core,cannon,postprocessing,soba,schematics",
@@ -54,6 +55,8 @@
         "@nrwl/storybook": "13.8.1",
         "@nrwl/tao": "13.8.1",
         "@nrwl/workspace": "13.8.1",
+        "@release-it/bumper": "3.0.1",
+        "@release-it/conventional-changelog": "4.1.0",
         "@storybook/addon-essentials": "~6.4.19",
         "@storybook/addons": "~6.4.19",
         "@storybook/angular": "~6.4.19",
@@ -68,6 +71,7 @@
         "all-contributors-cli": "6.20.0",
         "commitizen": "4.2.4",
         "cz-customizable": "~6.3.0",
+        "dotenv-cli": "5.0.0",
         "eslint": "~8.9.0",
         "eslint-config-prettier": "8.3.0",
         "jest": "27.5.1",
@@ -78,6 +82,7 @@
         "postcss-preset-env": "~7.3.3",
         "postcss-url": "~10.1.3",
         "prettier": "^2.5.1",
+        "release-it": "14.12.4",
         "ts-jest": "27.1.3",
         "tslib": "^2.0.0",
         "typescript": "~4.5.5"
