--- a/libs/schematics/package.json
+++ b/libs/schematics/package.json
@@ -6,6 +6,9 @@
     },
     "main": "src/index.js",
     "generators": "./generators.json",
-    "schematics": "./plugins/generators.json",
-    "executors": "./executors.json"
+    "schematics": "./generators.json",
+    "executors": "./executors.json",
+    "dependencies": {
+        "@nrwl/devkit": "~13.8.1"
+    }
 }
