--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "angular-three",
-    "version": "4.0.2",
+    "version": "4.1.0",
     "license": "MIT",
     "scripts": {
         "postinstall": "ngcc --properties es2015 browser module main",
@@ -11,7 +11,7 @@
         "storybook": "nx storybook storybook",
         "storybook:build": "nx storybook storybook:build-storybook",
         "build": "nx run-many --target=build --projects=core,cannon,postprocessing,soba,schematics",
-        "postbuild": "cp -R libs/cannon/src/lib/utils/ dist/libs/cannon",
+        "postbuild": "cp -R libs/cannon/src/lib/utils dist/libs/cannon/fesm2020 && cp -R libs/cannon/src/lib/utils dist/libs/cannon/fesm2015 && cp -R libs/cannon/src/lib/utils dist/libs/cannon/esm2020/lib",
         "publish": "nx run-many --target=publish --all --parallel"
     },
     "private": true,
