--- a/libs/cannon/package.json
+++ b/libs/cannon/package.json
@@ -6,11 +6,11 @@
     },
     "peerDependencies": {
         "@angular/common": "^13.2.0",
-        "@angular/core": "^13.2.0",
-        "cannon-es-debugger": "~1.0.0"
+        "@angular/core": "^13.2.0"
     },
     "dependencies": {
         "cannon-es": "~0.19.0",
+        "cannon-es-debugger": "~1.0.0",
         "tslib": "^2.3.0"
     }
 }
