--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
         "@angular/platform-browser": "~13.2.2",
         "@angular/platform-browser-dynamic": "~13.2.2",
         "@angular/router": "~13.2.2",
+        "@fortawesome/angular-fontawesome": "0.10.1",
+        "@fortawesome/fontawesome-svg-core": "1.3.0",
+        "@fortawesome/free-solid-svg-icons": "6.0.0",
         "cannon-es": "~0.19.0",
         "cannon-es-debugger": "~1.0.0",
         "nice-color-palettes": "3.0.0",
