--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
         "@types/three": "0.137.0",
         "@typescript-eslint/eslint-plugin": "~5.11.0",
         "@typescript-eslint/parser": "~5.11.0",
-        "all-contributors-cli": "6.20.0",
+        "all-contributors-cli": "~6.20.0",
         "commitizen": "4.2.4",
         "cz-customizable": "~6.3.0",
         "dotenv-cli": "5.0.0",
