chore(repo): checkout root package.json so that cache wouldn't be bursted

--- a/.release-it.json
+++ b/.release-it.json
@@ -45,6 +45,10 @@
         "releaseName": "Release ${version}"
     },
     "hooks": {
-        "after:bump": "npm run build"
+        "after:bump": [
+            "git checkout -- package.json",
+            "git checkout -- package-lock.json",
+            "npm run build"
+        ]
     }
 }
