--- a/package.json
+++ b/package.json
@@ -16,36 +16,27 @@
     },
     "private": true,
     "dependencies": {
-        "@angular/animations": "~13.3.2",
-        "@angular/common": "~13.3.2",
-        "@angular/compiler": "~13.3.2",
-        "@angular/core": "~13.3.2",
-        "@angular/forms": "~13.3.2",
-        "@angular/platform-browser": "~13.3.2",
-        "@angular/platform-browser-dynamic": "~13.3.2",
-        "@angular/router": "~13.3.2",
-        "@fortawesome/angular-fontawesome": "0.10.2",
-        "@fortawesome/fontawesome-svg-core": "6.1.1",
-        "@fortawesome/free-solid-svg-icons": "6.1.1",
-        "cannon-es": "~0.19.0",
-        "cannon-es-debugger": "~1.0.0",
-        "nice-color-palettes": "3.0.0",
-        "postprocessing": "~6.26.3",
-        "rxjs": "~7.5.5",
-        "three": "0.139.2",
-        "three-stdlib": "~2.9.1",
-        "troika-three-text": "~0.46.4",
-        "tslib": "^2.3.1",
-        "zone.js": "~0.11.5"
+        "tslib": "^2.3.1"
     },
     "devDependencies": {
         "@angular-devkit/build-angular": "~13.3.1",
         "@angular-eslint/eslint-plugin": "~13.2.0",
         "@angular-eslint/eslint-plugin-template": "~13.2.0",
         "@angular-eslint/template-parser": "~13.2.0",
+        "@angular/animations": "~13.3.2",
         "@angular/cli": "~13.3.1",
+        "@angular/common": "~13.3.2",
+        "@angular/compiler": "~13.3.2",
         "@angular/compiler-cli": "~13.3.2",
+        "@angular/core": "~13.3.2",
+        "@angular/forms": "~13.3.2",
         "@angular/language-service": "~13.3.2",
+        "@angular/platform-browser": "~13.3.2",
+        "@angular/platform-browser-dynamic": "~13.3.2",
+        "@angular/router": "~13.3.2",
+        "@fortawesome/angular-fontawesome": "0.10.2",
+        "@fortawesome/fontawesome-svg-core": "6.1.1",
+        "@fortawesome/free-solid-svg-icons": "6.1.1",
         "@nrwl/angular": "13.9.7",
         "@nrwl/cli": "13.9.7",
         "@nrwl/devkit": "13.9.7",
@@ -71,6 +62,8 @@
         "@typescript-eslint/eslint-plugin": "~5.18.0",
         "@typescript-eslint/parser": "~5.18.0",
         "all-contributors-cli": "~6.20.0",
+        "cannon-es": "~0.19.0",
+        "cannon-es-debugger": "~1.0.0",
         "commitizen": "4.2.4",
         "cz-customizable": "~6.3.0",
         "dotenv-cli": "5.1.0",
@@ -79,16 +72,23 @@
         "jest": "27.5.1",
         "jest-preset-angular": "11.1.1",
         "ng-packagr": "~13.3.0",
+        "nice-color-palettes": "3.0.0",
+        "nx": "13.9.7",
         "postcss": "~8.4.12",
         "postcss-import": "~14.1.0",
         "postcss-preset-env": "~7.4.3",
         "postcss-url": "~10.1.3",
+        "postprocessing": "~6.26.3",
         "prettier": "^2.6.2",
         "release-it": "14.14.0",
+        "rxjs": "~7.5.5",
+        "three": "0.139.2",
+        "three-stdlib": "~2.9.1",
+        "troika-three-text": "~0.46.4",
         "ts-jest": "27.1.4",
         "tslib": "^2.3.1",
         "typescript": "~4.5.5",
-        "nx": "13.9.7"
+        "zone.js": "~0.11.5"
     },
     "config": {
         "commitizen": {
