chore: comment out storybook

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "contributors:add": "all-contributors add",
     "release": "dotenv release-it --",
     "storybook": "nx storybook storybook",
-    "storybook:build": "nx storybook storybook:build-storybook",
+    "storybook:build": "nx run storybook:build-storybook",
     "build": "nx run-many --target=build --projects=core,cannon,postprocessing,soba,schematics",
     "publish": "nx run-many --target=publish --all --parallel"
   },
