--- a/netlify.toml
+++ b/netlify.toml
@@ -1,9 +1,10 @@
 [build]
-    publish = "dist/storybook/storybook"
-    command = "yarn nx run storybook:build-storybook
+    publish = "dist/storybook/storybook/"
+    command = "yarn nx run storybook:build-storybook"
     environment = { NODE_VERSION = "14.15.3" }
 
 [context.branch-deploy]
-    base = "libs/documentations"
+    base = "libs/documentations/"
     command = "npm run build"
     publish = "build/"
+
