--- a/netlify.toml
+++ b/netlify.toml
@@ -4,7 +4,6 @@
     environment = { NODE_VERSION = "14.15.3" }
 
 [context.branch-deploy]
-    base = "libs/documentations/"
-    command = "npm run build"
-    publish = "build/"
+    command = "cd libs/documentations && npm install && npm run build && cd ../ && STORYBOOK_BASE_HREF=soba/ npx nx build-storybook soba"
+    publish = "libs/documentations/build/"
 
