--- a/libs/soba/project.json
+++ b/libs/soba/project.json
@@ -25,7 +25,7 @@
             "executor": "@nrwl/jest:jest",
             "outputs": ["coverage/libs/soba"],
             "options": {
-                "jestConfig": "libs/soba/jest.config.js",
+                "jestConfig": "libs/soba/jest.config.ts",
                 "passWithNoTests": true
             }
         },
