--- a/netlify.toml
+++ b/netlify.toml
@@ -4,6 +4,6 @@
     environment = { NODE_VERSION = "14.15.3" }
 
 [context.branch-deploy]
-    command = "cd libs/documentations && npm install && npm run build && cd ../../ && STORYBOOK_BASE_HREF=soba/ npx nx build-storybook soba"
+    command = "npx nx build-all documentations"
     publish = "libs/documentations/build/"
 
