--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
         "storybook": "nx storybook soba",
         "build": "nx run-many --target=build --projects=core,cannon,postprocessing,soba,schematics",
         "publish": "nx run-many --target=publish --all --parallel",
-        "docs": "nx build-docs documentations"
+        "docs": "nx report"
     },
     "private": true,
     "dependencies": {
