--- a/package.json
+++ b/package.json
@@ -1,100 +1,101 @@
 {
-    "name": "angular-three",
-    "version": "4.4.0",
-    "license": "MIT",
-    "scripts": {
-        "postinstall": "ngcc --properties es2015 browser module main",
-        "commit": "git-cz",
-        "contributors:init": "all-contributors init",
-        "contributors:add": "all-contributors add",
-        "release": "dotenv release-it --",
-        "storybook": "nx storybook soba",
-        "build": "nx run-many --target=build --projects=core,cannon,postprocessing,soba,schematics",
-        "publish": "nx run-many --target=publish --all --parallel",
-        "predocs": "test \"$CI\" = true && npx pnpm install --no-frozen-lockfile -r --store=node_modules/.pnpm-store || echo skiping pnpm install",
-        "docs": "npx pnpm run predocs && nx build-docs documentations"
-    },
-    "private": true,
-    "dependencies": {
-        "@storybook/core-server": "6.4.22",
-        "tslib": "^2.3.1"
-    },
-    "devDependencies": {
-        "@angular-devkit/build-angular": "13.3.3",
-        "@angular-eslint/eslint-plugin": "~13.2.1",
-        "@angular-eslint/eslint-plugin-template": "~13.2.1",
-        "@angular-eslint/template-parser": "~13.2.1",
-        "@angular/animations": "13.3.3",
-        "@angular/cli": "13.3.3",
-        "@angular/common": "13.3.3",
-        "@angular/compiler": "13.3.3",
-        "@angular/compiler-cli": "13.3.3",
-        "@angular/core": "13.3.3",
-        "@angular/forms": "13.3.3",
-        "@angular/language-service": "13.3.3",
-        "@angular/platform-browser": "13.3.3",
-        "@angular/platform-browser-dynamic": "13.3.3",
-        "@angular/router": "13.3.3",
-        "@fortawesome/angular-fontawesome": "0.10.2",
-        "@fortawesome/fontawesome-svg-core": "6.1.1",
-        "@fortawesome/free-solid-svg-icons": "6.1.1",
-        "@nrwl/angular": "14.0.1",
-        "@nrwl/cli": "14.0.1",
-        "@nrwl/devkit": "14.0.1",
-        "@nrwl/eslint-plugin-nx": "14.0.1",
-        "@nrwl/jest": "14.0.1",
-        "@nrwl/js": "14.0.1",
-        "@nrwl/linter": "14.0.1",
-        "@nrwl/nx-cloud": "latest",
-        "@nrwl/nx-plugin": "14.0.1",
-        "@nrwl/storybook": "14.0.1",
-        "@nrwl/workspace": "14.0.1",
-        "@pmndrs/cannon-worker-api": "~2.1.0",
-        "@release-it/bumper": "3.0.1",
-        "@release-it/conventional-changelog": "4.3.0",
-        "@storybook/addon-essentials": "~6.4.22",
-        "@storybook/addons": "~6.4.22",
-        "@storybook/angular": "~6.4.22",
-        "@storybook/builder-webpack5": "~6.4.22",
-        "@storybook/manager-webpack5": "~6.4.22",
-        "@storybook/theming": "~6.4.22",
-        "@types/jest": "27.4.1",
-        "@types/node": "16.11.7",
-        "@types/three": "0.139.0",
-        "@typescript-eslint/eslint-plugin": "5.19.0",
-        "@typescript-eslint/parser": "5.19.0",
-        "all-contributors-cli": "~6.20.0",
-        "cannon-es": "~0.19.0",
-        "cannon-es-debugger": "~1.0.0",
-        "commitizen": "4.2.4",
-        "cz-customizable": "~6.3.0",
-        "dotenv-cli": "5.1.0",
-        "eslint": "8.13.0",
-        "eslint-config-prettier": "8.5.0",
-        "jest": "27.5.1",
-        "jest-preset-angular": "11.1.1",
-        "ng-packagr": "13.3.1",
-        "nice-color-palettes": "3.0.0",
-        "nx": "14.0.1",
-        "postcss": "~8.4.12",
-        "postcss-import": "~14.1.0",
-        "postcss-preset-env": "~7.4.3",
-        "postcss-url": "~10.1.3",
-        "postprocessing": "~6.26.3",
-        "prettier": "^2.6.2",
-        "release-it": "14.14.2",
-        "rxjs": "~7.5.5",
-        "three": "0.139.2",
-        "three-stdlib": "~2.9.1",
-        "troika-three-text": "~0.46.4",
-        "ts-jest": "27.1.4",
-        "tslib": "^2.3.1",
-        "typescript": "4.6.3",
-        "zone.js": "~0.11.5"
-    },
-    "config": {
-        "commitizen": {
-            "path": "./node_modules/cz-customizable"
-        }
+  "name": "angular-three",
+  "version": "4.4.0",
+  "license": "MIT",
+  "scripts": {
+    "postinstall": "ngcc --properties es2015 browser module main",
+    "commit": "git-cz",
+    "contributors:init": "all-contributors init",
+    "contributors:add": "all-contributors add",
+    "release": "dotenv release-it --",
+    "storybook": "nx storybook soba",
+    "build": "nx run-many --target=build --projects=core,cannon,postprocessing,soba,schematics",
+    "publish": "nx run-many --target=publish --all --parallel",
+    "predocs": "test \"$CI\" = true && npx pnpm install --no-frozen-lockfile -r --store=node_modules/.pnpm-store || echo skiping pnpm install",
+    "docs": "npx pnpm run predocs && nx build-docs documentations"
+  },
+  "private": true,
+  "dependencies": {
+    "@storybook/core-server": "6.4.22",
+    "tslib": "^2.3.1"
+  },
+  "devDependencies": {
+    "@angular-devkit/build-angular": "13.3.3",
+    "@angular-eslint/eslint-plugin": "~13.2.1",
+    "@angular-eslint/eslint-plugin-template": "~13.2.1",
+    "@angular-eslint/template-parser": "~13.2.1",
+    "@angular/animations": "13.3.3",
+    "@angular/cli": "13.3.3",
+    "@angular/common": "13.3.3",
+    "@angular/compiler": "13.3.3",
+    "@angular/compiler-cli": "13.3.3",
+    "@angular/core": "13.3.3",
+    "@angular/forms": "13.3.3",
+    "@angular/language-service": "13.3.3",
+    "@angular/platform-browser": "13.3.3",
+    "@angular/platform-browser-dynamic": "13.3.3",
+    "@angular/router": "13.3.3",
+    "@fortawesome/angular-fontawesome": "0.10.2",
+    "@fortawesome/fontawesome-svg-core": "6.1.1",
+    "@fortawesome/free-solid-svg-icons": "6.1.1",
+    "@nrwl/angular": "14.0.2",
+    "@nrwl/cli": "14.0.2",
+    "@nrwl/devkit": "14.0.2",
+    "@nrwl/eslint-plugin-nx": "14.0.2",
+    "@nrwl/jest": "14.0.2",
+    "@nrwl/js": "14.0.2",
+    "@nrwl/linter": "14.0.2",
+    "@nrwl/nx-cloud": "13.3.1",
+    "@nrwl/nx-plugin": "14.0.2",
+    "@nrwl/storybook": "14.0.2",
+    "@nrwl/workspace": "14.0.2",
+    "@pmndrs/cannon-worker-api": "~2.1.0",
+    "@release-it/bumper": "3.0.1",
+    "@release-it/conventional-changelog": "4.3.0",
+    "@storybook/addon-essentials": "~6.4.22",
+    "@storybook/addons": "~6.4.22",
+    "@storybook/angular": "~6.4.22",
+    "@storybook/builder-webpack5": "~6.4.22",
+    "@storybook/manager-webpack5": "~6.4.22",
+    "@storybook/theming": "~6.4.22",
+    "@types/jest": "27.4.1",
+    "@types/node": "16.11.7",
+    "@types/three": "0.139.0",
+    "@typescript-eslint/eslint-plugin": "5.19.0",
+    "@typescript-eslint/parser": "5.19.0",
+    "all-contributors-cli": "~6.20.0",
+    "cannon-es": "~0.19.0",
+    "cannon-es-debugger": "~1.0.0",
+    "commitizen": "4.2.4",
+    "cz-customizable": "~6.3.0",
+    "dotenv-cli": "5.1.0",
+    "eslint": "8.13.0",
+    "eslint-config-prettier": "8.5.0",
+    "jest": "27.5.1",
+    "jest-preset-angular": "11.1.1",
+    "ng-packagr": "13.3.1",
+    "nice-color-palettes": "3.0.0",
+    "nx": "14.0.2",
+    "postcss": "~8.4.12",
+    "postcss-import": "~14.1.0",
+    "postcss-preset-env": "~7.4.3",
+    "postcss-url": "~10.1.3",
+    "postprocessing": "~6.26.3",
+    "prettier": "^2.6.2",
+    "release-it": "14.14.2",
+    "rxjs": "~7.5.5",
+    "three": "0.139.2",
+    "three-stdlib": "~2.9.1",
+    "troika-three-text": "~0.46.4",
+    "ts-jest": "27.1.4",
+    "tslib": "^2.3.1",
+    "typescript": "4.6.3",
+    "zone.js": "~0.11.5"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-customizable"
     }
+  }
 }
+
