--- a/.release-it.json
+++ b/.release-it.json
@@ -25,14 +25,8 @@
             "infile": "CHANGELOG.md"
         },
         "@release-it/bumper": {
-            "in": "libs/core/package.json",
-            "out": [
-                "libs/cannon/package*.json",
-                "libs/core/package*.json",
-                "libs/postprocessing/package*.json",
-                "libs/soba/package*.json",
-                "libs/schematics/package*.json"
-            ]
+            "in": "package.json",
+            "out": "package.json"
         }
     },
     "git": {
@@ -46,6 +40,6 @@
         "releaseName": "Release ${version}"
     },
     "hooks": {
-        "after:bump": ["git checkout -- package.json", "npm run build"]
+        "after:bump": ["npm run build", "node tools/scripts/update-version.mjs"]
     }
 }
