--- a/libs/documentations/package.json
+++ b/libs/documentations/package.json
@@ -1,6 +1,6 @@
 {
     "name": "libs-documentations",
-    "version": "0.0.0",
+    "version": "0.0.0-replace",
     "private": true,
     "scripts": {
         "docusaurus": "docusaurus",
