--- a/libs/postprocessing/package.json
+++ b/libs/postprocessing/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@angular-three/postprocessing",
-    "version": "5.0.0-beta.25",
+    "version": "0.0.0-replace",
     "publishConfig": {
         "access": "public"
     },
