--- a/libs/schematics/package.json
+++ b/libs/schematics/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@angular-three/schematics",
-    "version": "5.0.0-beta.25",
+    "version": "0.0.0-replace",
     "publishConfig": {
         "access": "public"
     },
@@ -9,6 +9,6 @@
     "schematics": "./generators.json",
     "executors": "./executors.json",
     "dependencies": {
-        "@nrwl/devkit": "~13.8.1"
+        "@nrwl/devkit": "~14.0.0"
     }
 }
