--- a/libs/soba/package.json
+++ b/libs/soba/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@angular-three/soba",
-    "version": "5.0.0-beta.25",
+    "version": "0.0.0-replace",
     "publishConfig": {
         "access": "public"
     },
@@ -9,7 +9,7 @@
         "@angular/core": "^13.0.0"
     },
     "dependencies": {
-        "three-stdlib": "~2.9.0",
+        "three-stdlib": "~2.10.0",
         "troika-three-text": "~0.46.0",
         "tslib": "^2.3.0"
     }
