--- a/.release-it.json
+++ b/.release-it.json
@@ -25,8 +25,7 @@
             "infile": "CHANGELOG.md"
         },
         "@release-it/bumper": {
-            "in": "package.json",
-            "out": "package.json"
+            "in": "package.json"
         }
     },
     "git": {
