--- a/libs/documentations/project.json
+++ b/libs/documentations/project.json
@@ -9,10 +9,20 @@
                 "commands": [
                     "echo 'Building documentations...'",
                     "npx nx build documentations",
-                    "echo 'Building Storybook for Soba...'",
-                    "STORYBOOK_BASE_HREF=soba/ npx nx build-storybook soba"
+                    "echo 'Building external Soba storybook and Examples ...'",
+                    "npx nx build-external-docs documentations"
                 ],
                 "parallel": false
+            }
+        },
+        "build-external-docs": {
+            "executor": "@nrwl/workspace:run-commands",
+            "options": {
+                "commands": [
+                    "STORYBOOK_BASE_HREF=soba/ npx nx build-storybook soba",
+                    "npx nx build sandbox"
+                ],
+                "parallel": true
             }
         }
     },
