--- a/libs/schematics/package.json
+++ b/libs/schematics/package.json
@@ -9,6 +9,7 @@
     "schematics": "./generators.json",
     "executors": "./executors.json",
     "dependencies": {
+        "@nrwl/devkit": "~14.0.0",
         "nx": "~14.0.0"
     }
 }
