docs: handle redirect

--- a/netlify.toml
+++ b/netlify.toml
@@ -9,3 +9,9 @@
 [context.branch-deploy]
     command = "npx pnpm run docs"
     publish = "libs/documentations/build/"
+
+[[redirects]]
+    from = "/examples/*"
+    to = "/examples"
+    status = 301
+    force = true
