docs: adjust redirect again

--- a/netlify.toml
+++ b/netlify.toml
@@ -12,6 +12,6 @@
 
 [[redirects]]
     from = "/examples/*"
-    to = "/examples/"
+    to = "/examples/index.html"
     status = 301
     force = true
