--- a/.release-it.json
+++ b/.release-it.json
@@ -25,7 +25,7 @@
             "infile": "CHANGELOG.md"
         },
         "@release-it/bumper": {
-            "in": "package.json",
+            "in": "version.json",
             "out": "version.json"
         }
     },
