--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "angular-three",
-    "version": "5.0.0-beta.30",
+    "version": "0.0.0",
     "license": "MIT",
     "scripts": {
         "postinstall": "ngcc --properties es2015 browser module main",
