--- a/libs/documentations/blog/authors.yml
+++ b/libs/documentations/blog/authors.yml
@@ -1,17 +1,5 @@
-endi:
-    name: Endilie Yacop Sucipto
-    title: Maintainer of Docusaurus
-    url: https://github.com/endiliey
-    image_url: https://github.com/endiliey.png
-
-yangshun:
-    name: Yangshun Tay
-    title: Front End Engineer @ Facebook
-    url: https://github.com/yangshun
-    image_url: https://github.com/yangshun.png
-
-slorber:
-    name: Sébastien Lorber
-    title: Docusaurus maintainer
-    url: https://sebastienlorber.com
-    image_url: https://github.com/slorber.png
+nartc:
+    name: Chau Tran
+    title: Maintainer of Angular Three
+    url: https://github.com/nartc
+    image_url: https://nartc.me/assets/static/head.png
