--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -55,6 +55,15 @@
             "contributions": [
                 "code"
             ]
+        },
+        {
+            "login": "IRobot1",
+            "name": "andivr",
+            "avatar_url": "https://avatars.githubusercontent.com/u/25032599?v=4",
+            "profile": "https://github.com/IRobot1",
+            "contributions": [
+                "doc"
+            ]
         }
     ],
     "contributorsPerLine": 7
