chore: adjust predocs again

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
         "storybook": "nx storybook soba",
         "build": "nx run-many --target=build --projects=core,cannon,postprocessing,soba,schematics",
         "publish": "nx run-many --target=publish --all --parallel",
-        "predocs": "test \"$CI\" = true && npx pnpm install --no-frozen-lockfile -r --store=node_modules/.pnpm-store || echo skiping pnpm install",
+        "predocs": "test \"$CI\" = true && npx pnpm --filter \".\" --filter \"./libs/documentations\" install --no-frozen-lockfile --store=node_modules/.pnpm-store || echo skiping pnpm install",
         "docs": "npx pnpm run predocs && nx build-docs documentations"
     },
     "private": true,
