--- a/.release-it.json
+++ b/.release-it.json
@@ -41,6 +41,6 @@
   },
   "hooks": {
     "before:bump": "npm run build",
-    "after:bump": ["git checkout -- package.json", "git checkout -- package-lock.json"]
+    "after:bump": "git checkout -- package.json"
   }
 }
