--- a/.github/workflows/docusaurus.yml
+++ b/.github/workflows/docusaurus.yml
@@ -28,6 +28,11 @@ jobs:
                         ${{ runner.os }}-build-
                         ${{ runner.os }}-
 
+            -   uses: pnpm/action-setup@v2.1.0
+                with:
+                    version: latest
+                    run_install: false
+
             -   name: Install dependencies
                 if: ${{ steps.cached-deps.outputs.cache-hit != 'true' }}
                 run: pnpm --filter "./" --filter "./libs/documentations" install
